# u-lang

./: .gitignore  ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_v1.3.md  ARCHITECTURE_v1.4.md  ARCHITECTURE_v1.5.md  CHANGELOG.md  CHANGELOG_v0.7.md  CHANGELOG_v0.8.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_NEXT_STEP_ANALYSIS.md  CURRENT_CAPABILITIES_ANALYSIS.md  DOCUMENTATION_v1.3.md  DOCUMENTATION_v1.4.md  DOCUMENTATION_v1.5.md  ESTADO_ACTUAL_U_LANGUAGE.md  FAQ.md  FFI_PHASE1_COMPLETE.md  FFI_PRIORITY_SUMMARY.txt  GITHUB_COMPLETE.txt  GITHUB_PUSH_SUMMARY.txt  GITHUB_READINESS_ANALYSIS.md  GITHUB_READINESS_CHECKLIST.md  GITHUB_SETUP_COMPLETE.md  GUI_PROPOSAL_COMPARISON.md  INSTALLATION.md  LICENSE.txt  NOMENCLATURE_AUDIT_REPORT.md  NOMENCLATURE_CHANGES.md  OPCION_C_COMPLETADA.md  PENDING_FEATURES_ANALYSIS.md  PHASE1_DEVELOPMENT_START.md  PHASE1_EXECUTIVE_SUMMARY.md  PHASE1_GENERIC_TRAITS_SPEC.md  PHASE1_KICKOFF_SUMMARY.txt  PHASE5_COMPLETE_v1.0.md  PROJECT_STATISTICS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  (+35 more)
.github/: dependabot.yml  pull_request_template.md
compiler/: Cargo.toml
compiler/src/: actor_runtime.rs  codegen_ffi_impl.rs  concurrency_checker.rs  diagnostics.rs  formatter.rs  generics.rs  lexer.rs  linter.rs  macro_expander.rs  main.rs  optimizer.rs  ownership_checker.rs  package_manager.rs  parser.rs  parser_ffi_impl.rs  temp_type_checker_addition.txt  traits.rs  type_checker.rs  type_checker_assignment.txt
compiler/src/codegen/: c.rs
docs/: DSL_SPECIFICATION_v0.9.md  FFI_SPECIFICATION_v0.9.md  SKIA_INTEGRATION.md  SPEC.md  UL_TOML_SPEC.md  WINDOWS_NATIVE_COMPILER.md
examples/: actor_counter.ul  advanced_ui.ul  arithmetic.ul  calculator_cli.ul  conditionals_if.ul  demo_v1.2.ul  ffi_malloc.ul  ffi_printf.ul  gui_advanced.ul  gui_with_ownership.ul  hello.ul  loops_for.ul  loops_while.ul  skia_hello.ul  stdlib_usage.ul  test_ui_basic.ul  todo_app  todo_app.ul  traits_example.ul  ui_complete  ui_complete.ul  ui_demo.ul  ui_minimal.ul  ui_simple.ul  widgets_demo  widgets_demo.ul
lsp/: Cargo.toml
lsp/src/: main.rs
runtime/: actor_runtime_test  event_loop_test
scripts/: download_skia_windows.ps1  (+2 more)
(+33 files in other folders)
