[package]
name = "u-lsp"
version = "1.4.0"
edition = "2021"
authors = ["Webcien <u-lang@webcien.com>"]
description = "Language Server Protocol implementation for U Language"
license = "MIT"

[[bin]]
name = "u-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
